@@ -1,13 +1,14 @@
 # functions to aid in detecting linear dependent columns in the (transformed) 
 # model matrix or estimated plm models:
-#  * detect_lin_dep
+#  * detect.lindep
 #  * alias (the latter is a wrapper around alias.lm)
+#  * detect_lin_dep for backward compatibility
 #
 # doc file provides an extensive example how linear dependence can arise after
 # the data transformation, e. g., for within transformation
 
-### detect_lin_dep.matrix, .data.frame, .plm
-detect_lin_dep.matrix <- function(object, suppressPrint = FALSE, ...) {
+### detect.lindep.matrix, .data.frame, .plm
+detect.lindep.matrix <- function(object, suppressPrint = FALSE, ...) {
   if (!inherits(object, "matrix")) {
     stop("Input 'object' must be a matrix. Presumably, one wants a model matrix
          generated by some 'model.matrix' function.")}
@@ -34,24 +35,31 @@ detect_lin_dep.matrix <- function(object, suppressPrint = FALSE, ...) {
   return(num)
 }
 
-detect_lin_dep.data.frame <- function(object, suppressPrint = FALSE, ...) {
+detect.lindep.data.frame <- function(object, suppressPrint = FALSE, ...) {
   if (!inherits(object, "data.frame")) {
     stop("Input 'object' must be a data.frame")}
 
-  return(detect_lin_dep.matrix(as.matrix(object), ...))
+  return(detect.lindep.matrix(as.matrix(object), ...))
 }
 
-detect_lin_dep.plm <- function(object, suppressPrint = FALSE, ...) {
+detect.lindep.plm <- function(object, suppressPrint = FALSE, ...) {
   if (!inherits(object, "plm")) {
     stop("Input 'object' must be of class \"plm\"")}
 
-  return(detect_lin_dep.matrix(model.matrix(object), ...))
+  return(detect.lindep.matrix(model.matrix(object), ...))
 }
 
+
+detect.lindep <- function(object, ...) {
+  UseMethod("detect.lindep")
+}
 
 detect_lin_dep <- function(object, ...) {
-  UseMethod("detect_lin_dep")
+  .Deprecated(old = "detect_lin_dep", new = "detect.lindep",
+              msg = "Function name 'detect_lin_dep' deprecated, please use 'detect.lindep'")
+  UseMethod("detect.lindep")
 }
+
 
 ### alias.plm, alias.pFormula
 # This is just a wrapper function to allow to apply the generic stats::alias on
